# lex-kernel-oracle

./: .gitignore  1.	Deploy contracts:  1.	Install dependencies:  1.	Start API:  1.	Test execution:  2026_001_ASSET_REEVALUATION.md.  Add Solidity smart contracts for on-chain oracle  CAP_TABLE.md  CONTRIBUTING.md  DEPLOYMENTS.md  GLOSSARY.md  KERNEL 1: kl-401-lexmlb.py  LICENSE  LICENSE.md  LICENSE_SCL.md  NOTICE_OF_FIDUCIARY_PROTECTION.md  README.md  README.md (For Aerospace & Robotics Engineers)  README_BLOCKCHAIN.md  Subscribe (Monthly Access)  TERMS_OF_SERVICE.md  The Final Content for mcp-server-config.json  The Lex Sovereign Contributor License (SCL) v1.0  The TRUST_LEDGER.md  docker-compose.yml (API deployment)  env.example  hardhat.config.js  kl-401-lexmlb.py  kl-402-lexnfl.py  kl-403-lexnhl.py  kl-404-lexmls.py  kl-410-lexcrypto.py  kl-411-lexequity.py  kl-412-lexfutures.py  kl-430-lexretina.py  kl-431-lexglaucoma.py  kl-432-lexpediatric.py  kl-433-lexcataract.py  kl-434-lexsurgical.py  kl-435-lexscheduling.py  (+12 more)
: contracts/: LexOracle.sol
Create a core/: regulator.py
Create a core/The Global Royalty Injector (scripts/: apply_royalties.py
Name: src/: __init__.py
`docs/: lexrag-officeqa.pdf`
api/: requirements.txt  server.py (FastAPI bridge)
benchmarks/: benchmark_suite.py
chainlink/: deploy-function.js  source.js (Chainlink Functions)
contracts/: LexKernelAMM.sol (Trading Pool)  LexKernelIndex.sol  LexKernelOptions.sol (Derivatives)  LexKernelRegistry.sol  LexKernelSubscription.sol
core/: orchestrator.py  registry_gen.py:
docs/: DEPLOYMENT.md  KERNEL_MANIFEST.md  TOKENOMICS.md  TRUST_ASSET_REGISTRY.md  litepaper.md  tutorials  whitepaper.md
docs/RESOLUTIONS/: 2026_002_KEX_OPERATIONAL_ANCHOR.md  2026_002_KEX_UTILITY_ANCHOR.md
github/: PULL_REQUEST_TEMPLATE.md
github/ISSUE_TEMPLATE/: bug_report.md  kernel_request.md
github/workflows/: bounty-tracker.yml  ci.yml (Continuous Integration)  deploy-testnet.yml (Auto-deploy on tag)  security-audit.yml (Weekly security scan)
kernel-oracle/gateways/: BOUNTY_WP001_SPEC.md
kernels/: kl-001-lexdocket.py  kl-003-lexchart.py  kl-004-lexorbit.py  kl-012-lexgpt.py  kl-012-lexgrid.py  kl-013-lexaudio.py  kl-015-lexfinance.py  kl-017-lexvote.py  kl-020-lexhealth.py  kl-021-lexnuke.py  kl-027-lexblood.py  kl-029-lexdrone.py  kl-033-lexwater.py  kl-039-aml-oracle.py  kl-045-lexcrypto.py  kl-056-lexoil.py  kl-315-lexairport.py  kl-322-lexhotel.py  kl-329-lexaudit.py  kl-336-lexinsure.py  kl-343-lexweather.py  kl-350-lexsatellite.py  kl-357-lexcyber.py  kl-378-lexedu.py  kl-385-lexrag.py (NEW - RAG Fusion Kernel)  kl-420-lexoncology.py
kernels/kernels/: kl-008-lexpay.py  kl-052-lexbank.py  kl-062-lextraffic.py  kl-067-lexinsure.py  kl-073-lexcredit.py  kl-074-lexfarm.py  kl-081-lexseismic.py  kl-084-lexloan.py  kl-088-lexair.py  kl-091-lextrade.py  kl-095-lexmine.py  kl-098-lexad.py  kl-102-lexrail.py  kl-105-lexfreight.py  kl-109-lexhospital.py  kl-112-lexprice.py  kl-116-lexship.py  kl-119-lexclaim.py  (+31 more)
lex-kernel-oracle/: requirements.txt
react/: AdaptiveSpectralKernel.jsx
scripts/: deploy-index.js  deploy-mainnet.js  deploy-testnet.js  execute_task.js  verify.js (Verify on Basescan)
src/: adaptive_spectral_kernel.py  core.py  core_test.py  temporal_kernel.py  temporal_kernel_test.py  utils.py  utils_test.py
templates/: kernel_template.py
test/: LexKernelIndex.test.js  LexKernelRegistry.test.js
tests/: test_kernels.py
(+7 files in other folders)
